git-svn-id: https://deluge-siphon.googlecode.com/svn/trunk@11 d0f773b1-da4e-23c3-c3ab-6f5bd0db0e2f

--- a/options.html
+++ b/options.html
@@ -19,7 +19,7 @@
 <div id="right_col">
 	<h1>DelugeSiphon Options</h1>
 	<table cellspacing=0 cellpadding=0 >
-	<tr class="opts"><td align="right">Deluge Server URL (fully qualified with port):</td><td><input type="text" id="server_url" size="60"/></td></tr>
+	<tr class="opts"><td align="right">Deluge Server URL (no trailing slash):</td><td><input type="text" id="server_url" size="60"/></td></tr>
 	<tr class="opts"><td align="right">Display in-page status notifications:</td><td><input type="checkbox" id="inpage_notification" value="yes"/></td></tr>
 	<tr class="opts"><td align="right">Deluge Server WebUI Password:</td><td><input type="password" id="server_pass" size="40"/></td></tr>
 	<tr><td align="right"><button id="submit_button">Save Options</button></td><td><span id="status"></span></td></tr>
