--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
   <body>
   <div style="width:300px;">
 	<h4>DelugeSiphon</h4>
-	Right click on torrent links while holding the Control key to add torrents directly to your Deluge server.<br/>
+	Right click on torrent links to send them to your Deluge server.<br/>
 	Don't forget to configure your server info in this extension's <br/>
 	<a href="" id="opt-link" target="_blank">Options Page</a>.
    </div>
