git-svn-id: https://deluge-siphon.googlecode.com/svn/trunk@20 d0f773b1-da4e-23c3-c3ab-6f5bd0db0e2f

--- a/options.html
+++ b/options.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><title>DelugeSyphon Options</title>
+<head><title>DelugeSiphon Options</title>
 <script type="text/javascript" src="options_actions.js"></script>
 <style type="text/css">
 	#left_col,#right_col { float:left; margin:3px; }
