--- a/options.html
+++ b/options.html
@@ -21,7 +21,7 @@
 	<table cellspacing=0 cellpadding=0 >
 	<tr class="opts"><td align="right">Deluge Server URL:</td><td><input type="text" id="server_url" size="60" class="option_field"/></td></tr>
 	<tr class="opts"><td align="right">Deluge Server WebUI Password:</td><td><input type="password" id="server_pass" size="40" class="option_field"/></td></tr>
-	<tr class="opts"><td align="right">Display in-page status notifications:</td><td><input type="checkbox" id="inpage_notification" value="yes" class="option_field"/></td></tr>	
+	<tr class="opts"><td align="right">Display notifications:</td><td><input type="checkbox" id="inpage_notification" value="yes" class="option_field"/></td></tr>	
 	<tr class="opts"><td align="right">Enable Control + Right Click Macro:</td><td><input type="checkbox" id="enable_keyboard_macro" value="yes" class="option_field"/></td></tr>	
 	<tr><td align="right"><!-- button id="submit_button">Save Options</button --></td><td><span id="status"></span></td></tr>
 </div>
