--- a/popup.html
+++ b/popup.html
@@ -6,19 +6,28 @@
 	<style> 
 		* { font-family:helvetica,sans; font-size:11px; }
 		h4 { margin:3px 0 5px; padding:0; }
+		#server-url { padding-left:20px; background:url(login-icon.png) 2px 0 no-repeat; float:right; }
 	</style>
   </head>
   <body>
   <div style="width:300px;">
-	<h4>DelugeSiphon</h4>
+	<h4>DelugeSiphon<div id="server-url" style="display:none;"><a id="server-url-link" target="_deluge_web" href="">Login to Deluge Web UI</a></div></h4>
+
 	Right click on torrent links to send them to your Deluge server.<br/>
 	Don't forget to configure your server info in this extension's <br/>
 	<a href="" id="opt-link" target="_blank">Options Page</a>.
    </div>
 	<script>
+		//ask the backend nicely to tell us the server url entered in Options
+		chrome.extension.sendRequest({method: "storage-get-server_url"}, function(response) {
+			var servurl = response.value;
+			if (servurl) {
+				document.getElementById('server-url').style.display = 'block';
+				document.getElementById('server-url-link').href = servurl;
+			}
+		});
 		var opturl = chrome.extension.getURL("options.html");
-		var a = document.getElementById('opt-link');
-		a.href = opturl;
+		document.getElementById('opt-link').href = opturl;
 	</script>   
   <body>
 </html>
