--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <title>DelugeSyphon Status</title>
+<head>
+	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+	<title>DelugeSyphon Status</title>
 	<style> 
 		* { font-family:helvetica,sans; font-size:11px; }
 		h4 { margin:3px 0 5px; padding:0; }
@@ -11,18 +11,19 @@
 		#options { margin-right:10px; }
 		#server-url { padding-left:20px; background:url(login-icon.png) 2px 0 no-repeat; }
 	</style>
-  </head>
-  <body>
-  <div style="width:300px;">
-	<h4>DelugeSiphon 
-		<div id="links">
-			<div id="server-url" style="display:none;"><a id="server-url-link" target="_deluge_web" href="">Web UI</a></div>		
-			<div id="options"><a href="options.html" id="opt-link" target="_blank">Options Page</a></div>
-		</div>
-	</h4>
-	Right click on torrent links to send them to your Deluge server.<br/>
-	<span id="reminder"></span>
-   </div>
-  <body>
+</head>
+<body>
+	<div style="width:300px;">
+		<h4>DelugeSiphon 
+			<div id="links">
+				<div id="server-url" style="display:none;"><a id="server-url-link" target="_deluge_web" href="">Web UI</a></div>		
+				<div id="options"><a href="options.html" id="opt-link" target="_blank">Options Page</a></div>
+			</div>
+		</h4>
+		Right click on torrent links to send them to your Deluge server.<br/>
+		<span id="reminder"></span>
+	</div>
+	<script type="text/javascript" src="popup.js"></script>
+<body>
 </html>
 
