--- a/options.html
+++ b/options.html
@@ -37,9 +37,10 @@
 		<tr><td align="right">Enable Control + Right Click Macro:</td><td><input type="checkbox" id="enable_keyboard_macro" value="yes" class="option_field"/></td></tr>	
 	</tbody>
 	<tbody>
-		<tr><td align="right"><!-- button id="submit_button">Save Options</button --></td><td><span id="status"></span></td></tr>
+		<tr><td align="right"></td><td><span id="status"></span></td></tr>
 	</tbody>
 </div>
+<script type="text/javascript" src="utils.js"></script>
 <script type="text/javascript" src="options_actions.js"></script>
 </body>
 </html>
