--- a/options.html
+++ b/options.html
@@ -5,12 +5,8 @@
 <link rel="stylesheet" type="text/css" href="options.css">
 </head>
 <body class="frame">
-	<div class="navigation">
-		<h1>DelugeSiphon</h1>
-		<div class="sidebar-content">
-		<img src="icon-128.png" border=0/> 
-		
-		</div>
+	<div class="navigation"> 
+		<h1>DelugeSiphon <small><span id="version"></span></small></h1>
 	</div>
 	<div class="mainview view">
 		<div id="options" class="selected">
