--- a/options.html
+++ b/options.html
@@ -37,6 +37,12 @@
 				<h2>Input</h2>
 				<div class="checkbox opts">
 					<label>
+						<input type="checkbox" id="enable_context_menu" value="yes" class="option_field"/>
+						<span>Enable context menu entry (right-click)</span>			
+					</label>
+				</div>				
+				<div class="checkbox opts">
+					<label>
 						<input type="checkbox" id="enable_keyboard_macro" value="yes" class="option_field"/>
 						<span>Enable control + right click macro</span>						
 					</label>
