--- a/options.html
+++ b/options.html
@@ -6,12 +6,13 @@
 </head>
 <body class="frame">
 	<div class="navigation"> 
-		<h1>DelugeSiphon <small><span id="version"></span></small></h1>
+		<h3>DelugeSiphon <small><span id="version"></span></small></h3>
 	</div>
 	<div class="mainview view">
 		<div id="options" class="selected">
 			<header>
 				<h1>Options</h1>
+				<h2 class="alt"><small>(<a href="" id="reset_options">reset to defaults</a>)</small></h2>
 			</header>
 			<div class="content">
 				<h2>Connection Info</h2>
