--- a/options.html
+++ b/options.html
@@ -19,7 +19,7 @@
 				<h3>Deluge Server URL</h3>
 				<div class="textinput opts">
 					<label>
-						<input type="text" id="server_url" size="60" class="option_field" />
+						<input type="text" id="deluge_server_url" size="60" class="option_field" />
 					</label>
 				</div>
 				<h3>Deluge Server WebUI Password</h3>
@@ -62,6 +62,13 @@
 						<span><small>ex: \.torrent|^magnet:</small></span>						
 					</label>
 				</div>
+				<h2>Debug</h2>
+				<div class="checkbox opts">
+					<label>
+						<input type="checkbox" id="enable_debug_logging" value="yes" class="option_field"/>
+            <span>Enable console debug logging (requires reload from the <a href="#" id="manage_extension">Extensions page</a>)</span>			
+					</label>
+				</div>				
 
 			</div>
 		</div>
