--- a/popup.html
+++ b/popup.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <title>DelugeSyphon Status</title>
-    <style> 
+    <title>DelugeSiphon Status</title>
+    <style>
       * { font-family:helvetica,sans; font-size:11px; }
       h4 { margin:3px 0 5px; padding:0; }
       #links { float:right; }
@@ -11,13 +11,15 @@
       #options { padding-left:20px; background:url(images/options-16.png) 0 0 no-repeat; margin-right:10px; }
       #server-url { padding-left:20px; background:url(images/login-16.png) 0 0 no-repeat; }
       #title { padding-left:20px; background:url(icon-16.png) 0 0 no-repeat; height: 16px; float:left; }
+      .hidden { display: none; }
+      body > div { width:300px; }
     </style>
   </head>
   <body>
-    <div style="width:300px;">
+    <div>
       <h4><div id="title">DelugeSiphon</div>
         <div id="links">
-          <div id="server-url" style="display:none;"><a id="server-url-link" target="_deluge_web" href="">Web UI</a></div>		
+          <div id="server-url" class="hidden"><a id="server-url-link" target="_deluge_web" href="">Web UI</a></div>
           <div id="options"><a href="options.html" id="opt-link" target="_blank">Options Page</a></div>
         </div>
       </h4>
@@ -25,7 +27,9 @@
       Right click on torrent links to send them to your Deluge server.<br/>
       <span id="reminder"></span>
     </div>
-    <script type="text/javascript" src="popup.js"></script>
+    <script src="lib/jquery-3.0.0.min.js"></script>
+    <script src="lib/controller_communicator.js"></script>
+    <script src="lib/utils.js"></script>
+    <script src="popup.js"></script>
   <body>
 </html>
-
