--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
 <head>
 <title>delugesiphon</title>
 <link href="http://fonts.googleapis.com/css?family=VT323" rel="stylesheet" type="text/css">
-<link href="css/ds.css" type="text/css" rel="stylesheet" />
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+<style>
+*,body {
+    font-family: 'VT323', cursive;
+}
+
+section {
+    width: 960px;
+    margin:0 auto;
+    text-align: center;
+}
+
+section.hero {
+    height: 128px;
+    background:transparent url(img/icon-128.png) 416px 0 no-repeat;
+}
 </head>
+</style>
 <body>
 <section class="hero"></section>
 <section>
