--- a/options.html
+++ b/options.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head><title>DelugeSiphon Options</title>
+<head><title>delugesiphon Options</title>
 <link rel="stylesheet" type="text/css" href="chrome-bootstrap.css">
 <link rel="stylesheet" type="text/css" href="options.css">
 </head>
 <body class="frame">
 	<div class="navigation">
-		<h3>DelugeSiphon <small><span id="version"></span></small></h3>
+		<h3>delugesiphon <small><span id="version"></span></small></h3>
 	</div>
 	<div class="mainview view">
 		<div id="options" class="selected">
@@ -39,19 +39,19 @@
 				<div class="checkbox opts">
 					<label>
 						<input type="checkbox" id="enable_context_menu" value="yes" class="option_field"/>
-						<span>Enable context menu entry (right-click)</span>
+						<span>Enable right-click menu</span>
 					</label>
 				</div>
 				<div class="checkbox opts">
 					<label>
 						<input type="checkbox" id="enable_keyboard_macro" value="yes" class="option_field"/>
-						<span>Enable control + right click macro</span>
+						<span>Enable control + click to add with options</span>
 					</label>
 				</div>
 				<div class="checkbox opts">
 					<label>
 						<input type="checkbox" id="enable_leftclick" value="yes" class="option_field"/>
-						<span>Enable left click handling</span>
+						<span>Enable left click to add</span>
 					</label>
 				</div>
 				<h3>RegEx pattern for left click on torrent links</h3>
