--- a/popup.html
+++ b/popup.html
@@ -2,29 +2,31 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <title>DelugeSiphon Status</title>
+    <title>delugesiphon Status</title>
     <style>
       * { font-family:helvetica,sans; font-size:11px; }
       h4 { margin:3px 0 5px; padding:0; }
       #links { float:right; }
+      #title, #links > div { height: 16px; line-height: 16px; vertical-align: middle; }
       #server-url, #options { float:right; }
       #options { padding-left:20px; background:url(images/options-16.png) 0 0 no-repeat; margin-right:10px; }
       #server-url { padding-left:20px; background:url(images/login-16.png) 0 0 no-repeat; }
-      #title { padding-left:20px; background:url(icon-16.png) 0 0 no-repeat; height: 16px; float:left; }
+      #title { padding-left:20px; background:url(icon-16.png) 0 0 no-repeat; float:left; }
       .hidden { display: none; }
       body > div { width:300px; }
     </style>
   </head>
   <body>
     <div>
-      <h4><div id="title">DelugeSiphon</div>
+      <h4>
+        <div id="title">delugesiphon</div>
         <div id="links">
-          <div id="server-url" class="hidden"><a id="server-url-link" target="_deluge_web" href="">Web UI</a></div>
-          <div id="options"><a href="options.html" id="opt-link" target="_blank">Options Page</a></div>
+          <div id="server-url" class="hidden"><a id="server-url-link" target="_deluge_web" tabindex="-1" href="">Web UI</a></div>
+          <div id="options"><a href="options.html" id="opt-link" tabindex="-1" target="_blank">Options</a></div>
         </div>
       </h4>
-      <br clear="both"/><br/>
-      Right click on torrent links to send them to your Deluge server.<br/>
+
+      <br clear="both"/>
       <span id="reminder"></span>
     </div>
     <script src="lib/jquery-3.0.0.min.js"></script>
