getting build set up

--- a/options.html
+++ b/options.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><title>delugesiphon Options</title>
-<link rel="stylesheet" type="text/css" href="chrome-bootstrap.css">
-<link rel="stylesheet" type="text/css" href="options.css">
+<link rel="stylesheet" type="text/css" href="options.min.css">
 </head>
 <body class="frame">
 	<div class="navigation">
@@ -74,8 +73,6 @@
 		</div>
 	</div>
 </div>
-<script type="text/javascript" src="lib/jquery-3.0.0.min.js"></script>
-<script type="text/javascript" src="lib/utils.js"></script>
-<script type="text/javascript" src="options.js"></script>
+<script type="text/javascript" src="options.min.js"></script>
 </body>
 </html>
