--- a/popup.html
+++ b/popup.html
@@ -29,9 +29,6 @@
       <br clear="both"/>
       <span id="reminder"></span>
     </div>
-    <script src="lib/jquery-3.0.0.min.js"></script>
-    <script src="lib/controller_communicator.js"></script>
-    <script src="lib/utils.js"></script>
-    <script src="popup.js"></script>
+    <script src="popup.min.js"></script>
   <body>
 </html>
