--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@ ul { list-style: none; }
 <p>Released under the Apache License 2.0</p>
 <p>Just a simple Chrome extension for sending torrent links directly to your Deluge server</p>
 <h2><a id="Changelist_10"></a>Changelist</h2>
-<h3><a id="v_07_12"></a>v 0.70.1</h3>
+
+<h3><a id="v_0702_12"></a>v 0.70.2</h3>
+<ul>
+<li>Stop checking version for magnet support -- everyone has it by now and Deluge server version naming isn't consistent enough</li>
+</ul>
+<h3><a id="v_0701_12"></a>v 0.70.1</h3>
 <ul>
 <li>Fix bug with magnet links</li>
 </ul>
