--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>delugesiphon</title>
-<link href="http://fonts.googleapis.com/css?family=VT323" rel="stylesheet" type="text/css">
+<link href="//fonts.googleapis.com/css?family=VT323" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <style>
 *,body { font-family: 'VT323', cursive; }
