further factoring improvements and optimizations, added option to disable "add with options" context menu entry

--- a/options.html
+++ b/options.html
@@ -38,7 +38,13 @@
 				<div class="checkbox opts">
 					<label>
 						<input type="checkbox" id="enable_context_menu" value="yes" class="option_field"/>
-						<span>Enable right-click menu</span>
+						<span>Enable "Add" in right-click menu</span>
+					</label>
+				</div>
+				<div class="checkbox opts">
+					<label>
+						<input type="checkbox" id="enable_context_menu_with_options" value="yes" class="option_field"/>
+						<span>Enable "Add with Options" in right-click menu</span>
 					</label>
 				</div>
 				<div class="checkbox opts">
