--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
       #server-url, #options { float:right; }
       #options { padding-left:20px; background:url(images/options-16.png) 0 0 no-repeat; margin-right:10px; }
       #server-url { padding-left:20px; background:url(images/login-16.png) 0 0 no-repeat; }
-      #title { padding-left:20px; background:url(icon-16.png) 0 0 no-repeat; float:left; }
+      #title { padding-left:20px; background:url(images/icon-16.png) 0 0 no-repeat; float:left; }
       .hidden { display: none; }
       body > div { width:300px; }
     </style>
