--- a/options.html
+++ b/options.html
@@ -50,7 +50,7 @@
 				<div class="checkbox opts">
 					<label>
 						<input type="checkbox" id="enable_keyboard_macro" value="yes" class="option_field"/>
-						<span>Enable control + click to add with options</span>
+						<span>Enable control + right-click to add with options</span>
 					</label>
 				</div>
 				<div class="checkbox opts">
