--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@ h3 { font-style: italic; }
 <p>Released under the Apache License 2.0</p>
 <p>Just a simple Chrome extension for sending torrent links directly to your Deluge server</p>
 <h2><a id="Changelist_10"></a>Changelist</h2>
+<h3><a id="v_0704_12"></a>v 0.70.4</h3>
+<ul>
+  <li>Forgot to update option default =(</li>
+</ul>
 <h3><a id="v_0703_12"></a>v 0.70.3</h3>
 <ul>
 <li>Label support, seriously!</li>
 <li>Calculate max-z to ensure options modal always displays (thanks @Scorcher7986 for reporting this)</li>
 <li>Improved link matching regex. If you don't wanna reset your options to get it, just paste this in: <code>(\/|^)(torrents?|index)\.php.*?(\&|\?)(action=download|id=)|^magnet:|\.torrent($|\?)|(\/|^)torrent(\/|$)</code></li>
 </ul>
-
 <h3><a id="v_0702_12"></a>v 0.70.2</h3>
 <ul>
 <li>Stop checking version for magnet support -- everyone has it by now and Deluge server version naming isn't consistent enough</li>
