--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@ h3 { font-style: italic; }
 <p>Released under the Apache License 2.0</p>
 <p>Just a simple Chrome extension for sending torrent links directly to your Deluge server</p>
 <h2><a id="Changelist_10"></a>Changelist</h2>
+
+<h3><a id="v_0705_12"></a>v 0.70.5</h3>
+<ul>
+  <li>Only pop new "installed" window on major version change to reduce spammy behavior</li>
+  <li>Minor bug around having label plugin installed but no labels defined</li>
+</ul>
 <h3><a id="v_0704_12"></a>v 0.70.4</h3>
 <ul>
   <li>Forgot to update option default =(</li>
