--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@ h3 { font-style: italic; }
 <p>Just a simple Chrome extension for sending torrent links directly to your Deluge server</p>
 <h2><a id="Changelist_10"></a>Changelist</h2>
 
+<h3><a id="v_0706_12"></a>v 0.70.6</h3>
+<ul>
+  <li>Bugfix</li>
+</ul>
 <h3><a id="v_0705_12"></a>v 0.70.5</h3>
 <ul>
   <li>Only pop new "installed" window on major version change to reduce spammy behavior</li>
