--- a/options.html
+++ b/options.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><title>delugesiphon Options</title>
+<head><title>delugesiphon options</title>
 <link rel="stylesheet" type="text/css" href="options.min.css">
 </head>
 <body class="frame">
@@ -15,18 +15,11 @@
 			</header>
 			<div class="content">
 				<h2>Connection Info</h2>
-				<h3>Deluge Server URL</h3>
-				<div class="textinput opts">
-					<label>
-						<input type="text" id="deluge_server_url" size="60" class="option_field" />
-					</label>
-				</div>
-				<h3>Deluge Server WebUI Password</h3>
-				<div class="textinput opts">
-					<label>
-						<input type="password" id="server_pass" size="40" class="option_field" />
-					</label>
-				</div>
+
+        <div class="connection-info" id="connection-info">
+        </div>
+
+
 				<h2>Notifications</h2>
 				<div class="checkbox opts">
 					<label>
@@ -59,7 +52,8 @@
 						<span>Enable left click to add</span>
 					</label>
 				</div>
-				<h3>RegEx pattern for left click on torrent links</h3>
+        <h2>Advanced</h2>
+				<h3>Override default regular expression for torrent link matching</h3>
 				<div class="textinput opts">
 					<label>
 						<input type="text" id="link_regex" size="60" class="option_field"/>
@@ -67,7 +61,7 @@
 						<span><small>ex: \.torrent|^magnet:</small></span>
 					</label>
 				</div>
-				<h2>Debug</h2>
+				<h3>Debug</h3>
 				<div class="checkbox opts">
 					<label>
 						<input type="checkbox" id="enable_debug_logging" value="yes" class="option_field"/>
@@ -79,6 +73,28 @@
 		</div>
 	</div>
 </div>
+
+<script type="text/template" id="connection-string-tmpl">
+
+<div class="connection-container" data-index="{{>index}}">
+  <div class="connection-index">Deluge Server {{>index}}</div>
+  <h3>URL</h3>
+  <div class="textinput opts">
+    <label>
+      <input type="text" name="url" size="60" class="option_field" value="{{>url}}"/>
+    </label>
+    <br/><span><small>ex: http://localhost/user/deluge</span></small>
+  </div>
+  <h3>WebUI Password</h3>
+  <div class="textinput opts">
+    <label>
+      <input type="password" name="pass" size="40" class="option_field" value="{{>pass}}"/>
+    </label>
+  </div>
+</div>
+
+</script>
+
 <script type="text/javascript" src="options.min.js"></script>
 </body>
 </html>
