--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@ h3 { font-style: italic; }
 <p>Just a simple Chrome extension for sending torrent links directly to your Deluge server</p>
 <h2><a id="Changelist_10"></a>Changelist</h2>
 
-<h3><a id="v_0707_12"></a>v 0.70.8</h3>
+<h3><a id="v_0710_00"></a>v 0.71.0</h3>
+<ul>
+  <li> Bugfix</li>
+</ul>
+<h3><a id="v_0708_12"></a>v 0.70.8</h3>
 <ul>
   <li> Bugfix</li>
 </ul>
