--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@ h3 { font-style: italic; }
 <p>Just a simple Chrome extension for sending torrent links directly to your Deluge server</p>
 <h2><a id="Changelist_10"></a>Changelist</h2>
 
+
+<h3><a id="v_0711_00"></a>v 0.71.1</h3>
+<ul>
+  <li>Improved login/auth related code</li>
+  <li>Added "default label" option</li>
+</ul>
 <h3><a id="v_0710_00"></a>v 0.71.0</h3>
 <ul>
   <li> Bugfix</li>
