--- a/options.html
+++ b/options.html
@@ -4,15 +4,19 @@
 <link rel="stylesheet" type="text/css" href="options.min.css">
 </head>
 <body class="frame">
+
 	<div class="navigation">
 		<h3>delugesiphon <small><span id="version"></span></small></h3>
 	</div>
+
+
 	<div class="mainview view">
 		<div id="options" class="selected">
+
 			<header>
 				<h1>Options</h1>
-				<h2 class="alt"><small>(<a href="" id="reset_options">reset to defaults</a>)</small></h2>
 			</header>
+
 			<div class="content">
 
 				<h2>Connection Info</h2>
@@ -74,51 +78,55 @@
 				</div>
 
 			</div>
+
+      <div class="actions">
+        <button id="save_options">Save</button>
+        <small>(<a href="" id="reset_options">reset to defaults</a>)</small>
+      </div>
 		</div>
 	</div>
-</div>
 
-<script type="text/template" id="connection-string-tmpl">
-<div class="connection-container" data-index="{{>index}}">
-  <div class="connection-index">Deluge Server {{>index}}</div>
-  <h3>URL</h3>
-  <div class="textinput opts">
-    <label>
-      <input type="text" name="url" size="60" class="option_field" value="{{>url}}"/>
-    </label>
-    <br/><span><small>ex: http://localhost/user/deluge</span></small>
+  <script type="text/template" id="connection-string-tmpl">
+  <div class="connection-container" data-index="{{>index}}">
+    <div class="connection-index">Deluge Server {{>index}}</div>
+    <h3>URL</h3>
+    <div class="textinput opts">
+      <label>
+        <input type="text" name="url" size="60" class="option_field" value="{{>url}}"/>
+      </label>
+      <br/><span><small>ex: http://localhost/user/deluge</span></small>
+    </div>
+    <h3>WebUI Password</h3>
+    <div class="textinput opts">
+      <label>
+        <input type="password" name="pass" size="40" class="option_field" value="{{>pass}}"/>
+      </label>
+    </div>
   </div>
-  <h3>WebUI Password</h3>
-  <div class="textinput opts">
-    <label>
-      <input type="password" name="pass" size="40" class="option_field" value="{{>pass}}"/>
-    </label>
-  </div>
-</div>
-</script>
+  </script>
 
-<script type="text/template" id="labels-options-tmpl">
-<h2>Labels</h3>
-<div class="labels-container">
-  {{if labelsCreated}}
-  <h3>Default Label</h3>
-  <div class="select opts">
-    <select id="default_label" class="option_field">
-    {{for labels}}
-    <option value=""></option>
-    <option value="{{>#data}}">{{>#data}}</option>
-    {{/for}}
-    </select>
-    <span><small>Apply this label to all new torrents by default</small></span>
+  <script type="text/template" id="labels-options-tmpl">
+  <h2>Labels</h3>
+  <div class="labels-container">
+    {{if labelsCreated}}
+    <h3>Default Label</h3>
+    <div class="select opts">
+      <select id="default_label" class="option_field">
+      <option value=""></option>
+      {{for labels}}
+      <option value="{{>#data}}">{{>#data}}</option>
+      {{/for}}
+      </select>
+      <span><small>Apply this label to all new torrents by default</small></span>
+    </div>
+    {{else labelsEnabled}}
+    <p>You have not created any labels.  Visit your server's Web UI to make some</p>
+    {{else}}
+    <p>Labels plugin not enabled.  Visit your server's Web UI to enable them</p>
+    {{/if}}
   </div>
-  {{else labelsEnabled}}
-  <p>You have not created any labels.  Visit your server's Web UI to make some</p>
-  {{else}}
-  <p>Labels plugin not enabled.  Visit your server's Web UI to enable them</p>
-  {{/if}}
-</div>
-</script>
+  </script>
 
-<script type="text/javascript" src="options.min.js"></script>
+  <script type="text/javascript" src="options.min.js"></script>
 </body>
 </html>
