--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@ h3 { font-style: italic; }
 <p>Just a simple Chrome extension for sending torrent links directly to your Deluge server</p>
 <h2><a id="Changelist_10"></a>Changelist</h2>
 
+<h3><a id="v_0714_00"></a>v 0.71.4</h3>
+<ul>
+  <li>Bugfix</li>
+</ul>
 <h3><a id="v_0713_00"></a>v 0.71.3</h3>
 <ul>
   <li>Bugfix</li>
