--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@ h3 { font-style: italic; }
 <p>Just a simple Chrome extension for sending torrent links directly to your Deluge server</p>
 <h2><a id="Changelist_10"></a>Changelist</h2>
 
+<h3><a id="v_0715_00"></a>v 0.71.5</h3>
+<ul>
+  <li>Reduce verbosity of connection error notifications</li>
+  <li>Reduce agressiveness of "auto-login" code, which was causing timeouts</li>
+</ul>
 <h3><a id="v_0714_00"></a>v 0.71.4</h3>
 <ul>
   <li>Bugfix</li>
