--- a/options.html
+++ b/options.html
@@ -58,6 +58,14 @@
 					</label>
 				</div>
 
+        <h3>Tracker Options</h3>
+        <div class="checkbox opts">
+          <label>
+            <input type="checkbox" id="send_cookies" value="yes" class="option_field"/>
+            <span>Send your cookies with download request (required for most private trackers)</span>
+          </label>
+        </div>
+
         <div class="labels-options" id="labels-options"></div>
 
         <h2>Advanced</h2>
