refs #67 -- add note about 3p cookies

--- a/options.html
+++ b/options.html
@@ -62,7 +62,10 @@
         <div class="checkbox opts">
           <label>
             <input type="checkbox" id="send_cookies" value="yes" class="option_field"/>
-            <span>Send your cookies with download request (required for most private trackers)</span>
+            <span>Send your cookies with download request <br/>
+              <small><b>This option is required for most private trackers.  
+                  Third-party cookies must also be enabled in your browser.</b></small>
+            </span>
           </label>
         </div>
 
